
- work in progress:
	state variables

- Java:
-- sprintf(), printf()
-- support for primitive data types, work in progress: "byte", "short"

9.019 cpan:Perlito5  2016-04-10
- Java:
-- pure-typed expressions, see: misc/benchmark/benchmark_typed.pl
-- support for primitive data types, work in progress: "long", "int"
    see: misc/benchmark/benchmark_typed_primitive.pl

9.018 cpan:Perlito5  2016-03-02
- Docs:
-- new documentation file "README-howto-release.md"
- Java:
-- API to extend Java classes using Perl: new keywords "implements", "throws"
-- native "undef" is "null"
-- regex character class fixup - avoid double escape
-- hex(),crypt(),rindex() by Bas Appelo
-- oct() by Imran Mohammad
-- delete, exists fixes for non hash context
-- chomp() and chop() converted from JS to Java
-- Java example: new socket based client server game using Perl, by Imran Mohammad
	misc/Java/GameClient.pl, misc/Java/GameServer.pl
-- read/write argument list - $_[0]++

9.017 cpan:Perlito5  2016-01-19
- Tests:
-- Travis-ci integration https://travis-ci.org/fglock/Perlito added by fredericorecsky
- Java:
-- closure fixes: captured variables in for-loop; context
-- implement return followed by comma-separated list
-- new API to call Perl from Java
-- new API to extend Java classes using Perl
-- new API to access Java value types
-- internal integer number representation is now "long"
-- bless() and initial method call implementation (work in progress) by Bruno Czekay
-- generated code has a smaller diff between runs - github bug #39
-- regex: implemented string match in list context
-- regex: space in character classes is significant when /x is active - bug #40
-- regex: string replace preserves escape character - bug #41

9.016 cpan:Perlito5  2015-12-21
- Docs:
-- review cookbook entry "Obtaining a Perl compiler script that runs in the browser"
- Parser:
-- error message for: "Identifier too long" (Perl limit is 251 characters)
-- new error handler Perlito5::Compiler::error()